# AudioRecord

./: settings.gradle
Coverter/: build.gradle
Coverter/src/androidTest/java/com/peihua/coverter/: ExampleInstrumentedTest.kt
Coverter/src/main/cpp/: CMakeLists.txt  OpusConverter.cpp  mp3codec.cpp
Coverter/src/main/java/com/peihua/coverter/: AndroidLame.java  LameBuilder.java  OpusConverter.java  PcmDecoder.java  WaveReader.java
Coverter/src/test/java/com/peihua/coverter/: ExampleUnitTest.kt
app/: build.gradle
app/libs/: opuscodec-release.aar
app/src/androidTest/java/com/peihua/audiorecord/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/peihua/audiorecord/: AudioConverter.kt  AudioPlayer.kt  AudioRecordManager.kt  AudioRecordManager2.java  AudioRecorder.java  AudioRecorder.kt  FFmpegConverter.kt  LogFragment.java  LogUtil.kt  Logcat.java  MainActivity.kt  MediaDecoder.java  MediaDecoder.kt  MediaDecoder11.kt  Mp3AudioRecordActivity.java  PcmConvertMp3.java  PcmToMp3.java  PcmToMp3Converter.java  PcmToWavUtil.java  WaveHeader.java
app/src/main/java/com/peihua/audiorecord/ui/theme/: AudioRecordManager2.java  Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: fragment_log.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/peihua/audiorecord/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
